--- a/flutter_google_places_sdk/pubspec.yaml
+++ b/flutter_google_places_sdk/pubspec.yaml
@@ -13,10 +13,7 @@ dependencies:
   flutter_google_places_sdk_platform_interface: ^0.2.4+3
   flutter_google_places_sdk_ios: ^0.1.2+3
   flutter_google_places_sdk_web: ^0.1.3+3
-  flutter_google_places_sdk_android:
-    git:
-      url: https://github.com/jonaylor89/flutter_google_places_sdk/
-      path: flutter_google_places_sdk_android
+  flutter_google_places_sdk_android: ../flutter_google_places_sdk_android
   flutter_google_places_sdk_windows: ^0.1.0+1
 
 dev_dependencies:
